fixed links, smaller profile img, js visibility
fixed links, smaller profile img, add js visibility css

--- a/instagramphotos/style.css
+++ b/instagramphotos/style.css
@@ -31,7 +31,13 @@ h1 {
 
 #profImg {
     border-radius: 50%;
-    border: 3px double rgb(31, 35, 39)
+    border: 3px double rgb(31, 35, 39);
+    visibility: hidden;
+}
+
+#profImg{
+    height: 150px;
+    width: 150px;
 }
 
 .container {
